XWIKI-11292: Not rendered ColorTheme properties in Flamingo's CSS

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
@@ -215,9 +215,7 @@
 // Layout Styling =============================================================
 
 #headerglobal {
-  background-color: @xwiki-page-header-bg-color;
-  background-image: @xwiki-page-header-bg-image;
-  background-position: @xwiki-page-header-bg-position;
+  background: @xwiki-page-header-bg-color @xwiki-page-header-bg-image @xwiki-page-header-bg-position;
 }
 
 .main {
