XWIKI-11311: Add a new option to the livetable macro to output only HTML content, without syntax wrappers

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -1337,12 +1337,15 @@ ${Msz}Mb##
  * @param options the livetable options.
  *#
 #macro(livetable $divid $collist $colprops $options)
+## Open wiki syntax wrappers.
+#if("$!options.outputOnlyHtml" != 'true')
 ## Do not indent:
 #if($xwiki.getCurrentContentSyntaxId() != "xwiki/1.0")
 
 
 {{html}}
 #else {pre} #end
+#end
   ##
   ## SX deps.
   ##
@@ -1618,9 +1621,12 @@ ${Msz}Mb##
    //]]>
   </script>
 </div> ## xwiki-livetable-container
-  #if($xwiki.getCurrentContentSyntaxId() != "xwiki/1.0"){{/html}}
+  ## Close wiki syntax wrappers.
+  #if("$!options.outputOnlyHtml" != 'true')
+    #if($xwiki.getCurrentContentSyntaxId() != "xwiki/1.0"){{/html}}
 
 #else {/pre} #end
+  #end
 #end
 
 #**
