--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/deletespace.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/deletespace.vm
@@ -4,39 +4,46 @@
 ###
 #template("startpage.vm")
 <div class="main layoutsubsection">
-<div id="mainContentArea">
-#if ($message)
-  <div id="xwikimessage">$message</div>
-#end
-#set ($cancelURL = $doc.getURL())
-#if ($request.xredirect)
-  #set ($redirectparam = "&amp;xredirect=$escapetool.url($request.xredirect)")
-  #set ($cancelURL = $request.xredirect)
-#end
-#if ($xwiki.hasRecycleBin())
-  #set ($confirmationMessage = $services.localization.render('core.space.recyclebin.confirm', ["<em>${escapetool.xml($doc.space)}</em>"]))
-#else
-  #set ($confirmationMessage = $services.localization.render('core.space.delete.confirm', ["<em>${escapetool.xml($doc.space)}</em>"]))
-#end
+  <div id="mainContentArea">
+    #if ($message)
+      <div id="xwikimessage">$message</div>
+    #end
+    #set ($cancelURL = $doc.getURL())
+    #if ($request.xredirect)
+      #set ($redirectparam = "&amp;xredirect=$escapetool.url($request.xredirect)")
+      #set ($cancelURL = $request.xredirect)
+    #end
+    #if ($xwiki.hasRecycleBin())
+      #set ($confirmationMessage = $services.localization.render('core.space.recyclebin.confirm', ["<em>${escapetool.xml($doc.space)}</em>"]))
+    #else
+      #set ($confirmationMessage = $services.localization.render('core.space.delete.confirm', ["<em>${escapetool.xml($doc.space)}</em>"]))
+    #end
 
-#set($spaceParam = "space=$escapetool.url($doc.space)")
-#set($collist = ['doc.name','doc.date', 'doc.author'])
-#set($colprops = {})
-#set($options = { 
-  'translationPrefix' : 'platform.index.',
-  'extraParams': $spaceParam,
-  'rowCount' : 50,
-  'queryFilters' : 'unique'
-})
+    ##
+    ## List the documents to be deleted using a livetable
+    ##
+    #set ($collist = ['doc.name','doc.date', 'doc.author'])
+    #set ($colprops = {
+      'doc.name' : { 'link' : 'view' },
+      'doc.author' : { 'link' : 'author' }
+    })
+    #set ($urlParameters = "xpage=getdocuments&space=$escapetool.url($doc.space)&queryFilters=unique")
+    #set ($options = { 
+      'url' : "$doc.getURL('get', $urlParameters)",
+      'translationPrefix' : 'platform.index.',
+      'outputOnlyHtml' : true
+    })
+    ## Grab the output of the livetable macro so we can include it in the confirmation message below
+    #define ($spaceIndexLiveTable)
+    <div class='text-left'>
+      #livetable('deleteSpaceIndex' $collist $colprops $options)
+    </div>
+    #end
 
-#define($spaceIndexLiveTable) #livetable("deleteSpaceIndex" $collist $colprops $options) #end
-## bad hack: remove the macro markers
-#set($spaceIndexLiveTable=$stringtool.remove($spaceIndexLiveTable,'{{html}}'))
-#set($spaceIndexLiveTable=$stringtool.remove($spaceIndexLiveTable,'{{/html}}'))
-
-#set($confirmationMessage="$confirmationMessage <br /> $spaceIndexLiveTable")
-#xwikimessagebox($services.localization.render('core.delete') $confirmationMessage $doc.getURL('deletespace', "confirm=1$!{redirectparam}&amp;form_token=$!{services.csrf.getToken()}") $escapetool.xml($cancelURL) $services.localization.render('yes') $services.localization.render('no'))
-<div class="clearfloats"></div>
-</div>## mainContentArea
-</div>## main
+    ## Build and show the final confirmation message containing the livetable
+    #set ($confirmationMessage = "$confirmationMessage <br /> $spaceIndexLiveTable")
+    #xwikimessagebox($services.localization.render('core.delete') $confirmationMessage $doc.getURL('deletespace', "confirm=1$!{redirectparam}&amp;form_token=$!{services.csrf.getToken()}") $escapetool.xml($cancelURL) $services.localization.render('yes') $services.localization.render('no'))
+    <div class="clearfloats"></div>
+  </div>
+</div>
 #template("endpage.vm")
