XWIKI-11316: No way to access the document currently being exported from the pdf template * Added a velocity variable in pdf.vm to store the current translated document ($tdoc), this way when $tdoc will be changed by the render function of the pdftemplate properties, this var will still point to the current document being exported. (cherry picked from commit 728113153ea85de791921435d15d6cc11f0717d1)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/pdf.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/pdf.vm
@@ -5,6 +5,8 @@
   #set($pdfdoc = $tdoc)
 #end
 #set($pdfobj = $pdfdoc.getObject('XWiki.PDFClass'))
+## put the current doc being exported in a variable, to allow accessing it from the pdftemplate properties (header, footer, etc).
+#set($pdfExportedDoc = $tdoc)
 #template("pdfhtmlheader.vm")
 #set ($withPageBreaks = false)
 #if ("$!{request.pagebreaks}" == '1')
