--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/global.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/global.vm
@@ -55,12 +55,19 @@
   #if($defaultLanguage == '')
     #set($defaultLanguage = "default")
   #end
+  ## Get the query string as a map to preserve the values except the language (see: http://jira.xwiki.org/browse/XWIKI-11314)
+  #set($queryStringMap = {})
+  #set($parameterMap = $request.getParameterMap())
+  #foreach($param in $parameterMap.entrySet())
+    #set($discard = $queryStringMap.put($param.key, $param.value))
+  #end
   <a href="$!doc.getURL("view", "language=$defaultLanguage")" class="language-default#if($tdoc.realLanguage == $defaultLanguage || ($defaultLanguage == 'default' && $tdoc.realLanguage == '')) language-current#end">$defaultLanguage</a>
   #set ($wikiSettingsLanguages = $!xwiki.getXWikiPreference('languages').trim().split('\s*[,| ]\s*'))
   #set ($hasLanguagesSet = $wikiSettingsLanguages.size() > 1 || "$!wikiSettingsLanguages.get(0)" != '')
   #foreach($lang in $doc.translationList)
     #if(!$hasLanguagesSet || $wikiSettingsLanguages.contains($lang))
-      <a href="$!doc.getURL("view", "language=$lang")" class="language-translation#if($tdoc.realLanguage == $lang) language-current#end">$!lang</a>
+      #set($discard = $queryStringMap.put('language', $lang))
+      <a href="$!doc.getURL("view", $escapetool.url($queryStringMap))" class="language-translation#if($tdoc.realLanguage == $lang) language-current#end">$!lang</a>
     #end
   #end
   </span>
