--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
@@ -199,12 +199,12 @@ tbody.xwiki-livetable-display-body td.linkeditor, tbody.xwiki-livetable-display-
   cursor: pointer;
 }
 tbody.xwiki-livetable-display-body td:hover.linkeditor {
-  background: $theme.highlightColor url("$xwiki.getSkinFile('pencil.gif')") no-repeat scroll right center;
+  background: $theme.highlightColor url("$xwiki.getSkinFile('icons/silk/pencil.png')") no-repeat scroll right center;
   cursor: pointer;
 }
 tbody.xwiki-livetable-display-body td.linkeditor a.editableCellHover { /* for IE6 td:hover fix and because IE6 doesn't support multiple class td.linkeditor.editableCellHover*/
   display: block;
-  background: $theme.highlightColor url("$xwiki.getSkinFile('pencil.gif')") no-repeat scroll right center;
+  background: $theme.highlightColor url("$xwiki.getSkinFile('icons/silk/pencil.png')") no-repeat scroll right center;
   cursor: pointer;
   color: $theme.textColor;
   padding-right: 16px;
