XWIKI-11314: Changing the current language from the UI does not preserve the query string of the current URL.
(cherry picked from commit f38bcdfbdec97938e63062aaf51a9ceb3e7169db)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_language.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_language.vm
@@ -17,10 +17,7 @@
     #end
     ## Get the query string as a map to preserve the values except the language (see: http://jira.xwiki.org/browse/XWIKI-11314)
     #set($queryStringMap = {})
-    #set($parameterMap = $request.getParameterMap())
-    #foreach($param in $parameterMap.entrySet())
-      #set($discard = $queryStringMap.put($param.key, $param.value))
-    #end
+    #set($discard = $queryStringMap.putAll($request.parameterMap))
     #if($additionallangs.size() > 0)
       #set($discard = $queryStringMap.put('language', $currentLanguage))
       #xwikitopmenuentrystart ($doc.getURL('view', $escapetool.url($queryStringMap)), "#displayLanguagePrettyName($currentLanguage)", 'tmLanguages', '', '', '')
