XWIKI-11347: Using an empty flamingo theme breaks the UI.
(cherry picked from commit a135241607b5d87c59bf30f6b82bbaafa62dedc3)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -99,6 +99,16 @@
 ##############################################
 #macro(initFromFlamingoTheme)
   // Colors from the new flamingo theme class
+  ## Set the XWiki variables
+  @xwiki-page-content-bg:               $theme.pageContentBackgroundColor;
+  @xwiki-border-color:                  $theme.borderColor;
+  @xwiki-panel-header-bg:               $theme.panelHeaderBackgroundColor;
+  @xwiki-panel-header-text:             $theme.panelHeaderTextColor;
+  @xwiki-background-secondary-color:    $theme.backgroundSecondaryColor;
+  @xwiki-page-header-bg-color:          $theme.pageHeaderBackgroundColor;
+  @xwiki-page-header-bg-image:          $!{theme.headerBackgroundImage};
+  @xwiki-page-header-bg-position:       $!{theme.headerBackgroundPosition};
+  ## Now set the variables with the values of the object
   #if ("$!themeObj" != '')
     ## variables of the class
     #set($variables = {
@@ -173,13 +183,6 @@
       #end
     #end
   #end
-  @xwiki-border-color:                  $theme.borderColor;
-  @xwiki-panel-header-bg:               $theme.panelHeaderBackgroundColor;
-  @xwiki-panel-header-text:             $theme.panelHeaderTextColor;
-  @xwiki-background-secondary-color:    $theme.backgroundSecondaryColor;
-  @xwiki-page-header-bg-color:          $theme.pageHeaderBackgroundColor;
-  @xwiki-page-header-bg-image:          $!{theme.headerBackgroundImage};
-  @xwiki-page-header-bg-position:       $!{theme.headerBackgroundPosition};
 #end
 
 ##############################################
