XWIKI-11347: Using an empty flamingo theme breaks the UI.
(cherry picked from commit 812432402311e592aefd7ee0f98ee176159d7f26)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -100,7 +100,7 @@
 #macro(initFromFlamingoTheme)
   // Colors from the new flamingo theme class
   ## Set the XWiki variables
-  @xwiki-page-content-bg:               @body-bg;
+  @xwiki-page-content-bg:               $theme.pageContentBackgroundColor;
   @xwiki-border-color:                  $theme.borderColor;
   @xwiki-panel-header-bg:               $theme.panelHeaderBackgroundColor;
   @xwiki-panel-header-text:             $theme.panelHeaderTextColor;
