--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -186,9 +186,13 @@
 }
 
 // FIX: Date Picker
-.calendar_date_select {
+.skin-flamingo .calendar_date_select {
+  width: auto;
   div.cds_header select.month {
-    width: 80px;
+    width: 9em;
+  }
+  div.cds_header select.year {
+    width: 7em;
   }
   td {
     padding: 0;
