XWIKI-10835: Missing space between icon and space name.
(cherry picked from commit f5cad889dff5b395d93fb4914aa04537c70794e7)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -277,6 +277,13 @@
   font-size: 0px;
 }
 
+
+// Fix: Glyphicon: the space icon has a bad width
+// (see: http://jira.xwiki.org/browse/XWIKI-10835)
+.glyphicon-folder-open:before {
+  margin-right: 3px;
+}
+
 // Export ---------------------------------------------------------------------
 #exportModal {
   .modal-body {
