XWIKI-11176: Use jsTree to rewrite and improve the trees we currently have in XWiki * Fix the loading animation.

--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/tree.less
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/tree.less
@@ -118,6 +118,9 @@
 /**
  * Custom styles for XWiki
  */
+.jstree-xwiki > .jstree-container-ul .jstree-loading > .jstree-ocl {
+  background-image: url("$!xwiki.getSkinFile('icons/xwiki/spinner.gif')");
+}
 .jstree ul.jstree-children {
   /* Overwrite the margin and padding from the XWiki skin. */
   margin: 0;
