XWIKI-11390: Rendering errors are displayed inline, making them unreadable.
(cherry picked from commit 427cc105da835c4f7f8ab702ea768f6730a8e813)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/messages.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/messages.less
@@ -36,6 +36,7 @@ fieldset.xwikimessage { // Used by: Login form, Delete messages
 .xwikirenderingerror {
   .box;
   .alert-danger;
+  display: block;
   margin-bottom: 0;
 }
 
@@ -44,4 +45,7 @@ fieldset.xwikimessage { // Used by: Login form, Delete messages
   .border-top-radius(0);
   border-color: @alert-danger-border;
   border-style: solid;
+  display: block;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
