--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/messages.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/messages.less
@@ -11,7 +11,7 @@ span.box { // Used by: Inline boxes and messages
 .box, .plainmessage, // Used by: Code Macro, Success Macro, etc.
 fieldset.xwikimessage { // Used by: Login form, Delete messages
   .well;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .plainmessage {
