XWIKI-11402: Introduce a parameter for "xpage=plain" and "get" to display the HTML headers and footers.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/get.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/get.vm
@@ -3,4 +3,4 @@
 ########################################################
 #template("xwikivars.vm")
 $response.setContentType("text/plain")##
-#template("rendercontent.vm")
+#template("displaycontent.vm")
