--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/plain.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/plain.vm
@@ -5,5 +5,5 @@ $response.setContentType('text/plain')##
 $cdoc.getTranslatedContent()
 #else
 #template('xwikivars.vm')
-#template('rendercontent.vm')
+#template('displaycontent.vm')
 #end
