--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/pdfhtmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/pdfhtmlheader.vm
@@ -17,7 +17,7 @@
 ## NOTE: We intentionally use the signature with 4 arguments (3 strings and an object) because the signature without the
 ## prefix (empty string here) is mistaken with the 3-strings signature if the passed object is null (i.e. Velocity
 ## considers the null object a string).
-#set ($title = $pdfdoc.display('title', 'rendered', '', $pdfobj))
+#set ($title = $tdoc.display('title', 'rendered', '', $pdfobj))
 #if ((!$title) || ($title == ''))
   $!{escapetool.xml($doc.space)} - $!{escapetool.xml($tdoc.plainTitle)}
 #else
@@ -29,7 +29,7 @@
 </head>
 <body id="body" class="${xcontext.action}body" pdfcover="${displayPdfCover}" pdftoc="${displayPdfToc}">
 <div class="pdfheader">
-#set ($pdfheader = $pdfdoc.display('header', 'rendered', '', $pdfobj))
+#set ($pdfheader = $tdoc.display('header', 'rendered', '', $pdfobj))
 #if ($pdfheader == '')
   #template("pdfheader.vm")
 #else
@@ -37,7 +37,7 @@
 #end
 </div>
 <div class="pdffooter">
-#set ($pdffooter = $pdfdoc.display('footer', 'rendered', '', $pdfobj))
+#set ($pdffooter = $tdoc.display('footer', 'rendered', '', $pdfobj))
 #if ($pdffooter == '')
   #template("pdffooter.vm")
 #else
@@ -46,7 +46,7 @@
 </div>
 #if ($displayPdfCover == 1)
   <div class="pdfcover">
-  #set ($pdfcover = $pdfdoc.display('cover', 'rendered', '', $pdfobj))
+  #set ($pdfcover = $tdoc.display('cover', 'rendered', '', $pdfobj))
   #if ($pdfcover == '')
     #template("pdfcover.vm")
   #else
@@ -56,7 +56,7 @@
 #end
 #if ($displayPdfToc == 1)
   <div class="pdftoc">
-  #set ($pdftoc = $pdfdoc.display('toc', 'rendered', '', $pdfobj))
+  #set ($pdftoc = $tdoc.display('toc', 'rendered', '', $pdfobj))
   #if ($pdftoc == '')
     #template("pdftoc.vm")
   #else
