XWIKI-11382: DBTreeList properties don't display checkboxes in edit mode and layout is broken on flamingo.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/style.less.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/style.less.vm
@@ -21,6 +21,7 @@
 @import "messages";
 @import "misc";
 @import "panels";
+@import "tree";
 @import "type";
 @import "vertical-menus";
 @import "xlist";
