XWIKI-11425: Capitalize Livetable action buttons (again)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
@@ -226,6 +226,7 @@ tbody.xwiki-livetable-display-body td a.action {
   background-repeat: no-repeat;
   margin-right: 5px;
   padding-bottom: 1px;
+  text-transform: capitalize;
 }
 tbody.xwiki-livetable-display-body td a.action:hover {
   text-decoration: underline;
