--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/passwd.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/passwd.vm
@@ -17,82 +17,82 @@ document.observe('xwiki:dom:loaded', function() {
 </script>
 <div class="minwidthb"></div>
 <div class="main layoutsubsection">
-<div id="mainContentArea">
-#if($doc.getObject("XWiki.XWikiUsers", 0))
-#set($i = $xcontext.user.indexOf(":")+1)
-#if($xcontext.user.substring($i) == $doc.fullName || $hasAdmin)
-  <div id="document-title"><h1>$services.localization.render('platform.core.profile.passwd.title', [$escapetool.xml($xwiki.getUserName($doc.fullName, false))])</h1></div>
-  #if($request.password && $request.password2)
-      #set($isValidPassword = true)
-      #set($errorMessage = "")
-      #set($password = $request.password)
-      #set($password2 = $request.password2)
-      #if(!$hasAdmin)
-        #set($user = $xwiki.getUser())
-        #set($isOriginalPasswordValid = $user.checkPassword($request.originalpassword))
-        #if(!$isOriginalPasswordValid)
-          #set($errorMessage = $services.localization.render('platform.core.profile.passwd.invalidOriginalPassword'))
+  <div id="mainContentArea">
+  #set($userObject = $doc.getObject('XWiki.XWikiUsers'))
+  #if($userObject)
+    #set($isCurrentUsersProfile = $doc.documentReference.equals($xcontext.userReference))
+    #if($isCurrentUsersProfile || $hasAdmin)
+      <div id="document-title"><h1>$services.localization.render('platform.core.profile.passwd.title', [$escapetool.xml($xwiki.getUserName($doc.fullName, false))])</h1></div>
+      #if($request.password && $request.password2)
+        #set($isValidPassword = true)
+        #set($errorMessage = "")
+        #set($password = $request.password)
+        #set($password2 = $request.password2)
+        #if($isCurrentUsersProfile || !$hasAdmin)
+          #set($user = $xwiki.getUser())
+          #set($isOriginalPasswordValid = $user.checkPassword($request.originalpassword))
+          #if(!$isOriginalPasswordValid)
+            #set($errorMessage = $services.localization.render('platform.core.profile.passwd.invalidOriginalPassword'))
+            #set($isValidPassword = false)
+          #end
+        #end
+        #if($password != $password2)
+          #set($errorMessage = $services.localization.render('platform.core.profile.passwd.passwordMissmatch'))
+          #set($isValidPassword = false)
+        #elseif($password == '')
+          #set($errorMessage = $services.localization.render('platform.core.profile.passwd.passwordCannotBeEmpty'))
+          #set($isValidPassword = false)
+        #elseif($password.length() < 6)
+          #set($errorMessage = $services.localization.render('platform.core.profile.passwd.passwordTooShort'))
           #set($isValidPassword = false)
         #end
+        #if($isValidPassword)
+          $doc.set('password', $password, $userObject)
+          $doc.save("$services.localization.render('platform.core.profile.passwd.passwordChanged')", true)
+        #end
       #end
-      #if($password != $password2)
-        #set($errorMessage = $services.localization.render('platform.core.profile.passwd.passwordMissmatch'))
-        #set($isValidPassword = false)
-      #elseif($password == '')
-        #set($errorMessage = $services.localization.render('platform.core.profile.passwd.passwordCannotBeEmpty'))
-        #set($isValidPassword = false)
-      #elseif($password.length() < 6)
-        #set($errorMessage = $services.localization.render('platform.core.profile.passwd.passwordTooShort'))
-        #set($isValidPassword = false)
+      #if($request.password)
+        #if($isValidPassword)
+          <span class='box infomessage'>$services.localization.render('platform.core.profile.passwd.success')</span>
+          <a href = "$doc.getURL("view")">$services.localization.render('platform.core.profile.passwd.return')</a>
+        #else
+          <span class='box errormessage'>$errorMessage</span>
+        #end
       #end
-      #if($isValidPassword)
-        #set($object = $doc.getObject('XWiki.XWikiUsers'))
-        $doc.set('password', $password, $object)
-        $doc.save("$services.localization.render('platform.core.profile.passwd.passwordChanged')", true)
-      #end
-    #end
-    #if($request.password)
-      #if($isValidPassword)
-        <span class='box infomessage'>$services.localization.render('platform.core.profile.passwd.success')</span>
-        <a href = "$doc.getURL("view")">$services.localization.render('platform.core.profile.passwd.return')</a>
-      #else
-         <span class='box errormessage'>$errorMessage</span>
-      #end
-    #end
-    #if(!$isValidPassword)
-      #set($discard = $xwiki.jsfx.use('uicomponents/widgets/validation/livevalidation_prototype.js'))
-      #set($discard = $xwiki.ssfx.use('uicomponents/widgets/validation/livevalidation.css', true))
-      $services.localization.render('platform.core.profile.passwd.instructions')
+      #if(!$isValidPassword)
+        #set($discard = $xwiki.jsfx.use('uicomponents/widgets/validation/livevalidation_prototype.js'))
+        #set($discard = $xwiki.ssfx.use('uicomponents/widgets/validation/livevalidation.css', true))
+        $services.localization.render('platform.core.profile.passwd.instructions')
 
-  <form class="xform third" action="" method="post" autocomplete="off">
-    ## CSRF prevention
-    <div class="hidden"><input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" /></div>
-    <dl>
-      #if(!$hasAdmin)
-        <dt><label for="xwikioriginalpassword">$services.localization.render('platform.core.profile.passwd.originalPassword')</label></dt>
-        <dd><input id="xwikioriginalpassword" type="password" name="originalpassword" value="$!escapetool.xml($request.originalpassword)" size="60"/></dd>
+      <form class="xform third" action="" method="post" autocomplete="off">
+        ## CSRF prevention
+        <div class="hidden"><input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" /></div>
+        <dl>
+          #if($isCurrentUsersProfile || !$hasAdmin)
+            <dt><label for="xwikioriginalpassword">$services.localization.render('platform.core.profile.passwd.originalPassword')</label></dt>
+            <dd><input id="xwikioriginalpassword" type="password" name="originalpassword" value="$!escapetool.xml($request.originalpassword)" size="60"/></dd>
+          #end
+          <dt><label id="xwikipasswordlabel" for="xwikipassword">$services.localization.render('platform.core.profile.passwd.newPassword')</label></dt>
+          <dd><input id="xwikipassword" type="password" name="password" value="$!escapetool.xml($request.password)" size="60"/></dd>
+          <dt><label id="xwikipassword2label" for="xwikipassword2">$services.localization.render('platform.core.profile.passwd.reenterPassword')</label></dt>
+          <dd><input id="xwikipassword2" type="password" name="password2" value="$!escapetool.xml($request.password2)" size="60"/></dd>
+        </dl>
+        <div class="padded buttons">
+          <span class="buttonwrapper"><input type="submit" value="$services.localization.render('platform.core.profile.passwd.submit')" class="button"/></span>
+          <span class="buttonwrapper"><a href="$doc.getURL("view")" class="secondary button">$services.localization.render('platform.core.profile.passwd.cancel')</a></span>
+        </div>
+      </form>
       #end
-      <dt><label id="xwikipasswordlabel" for="xwikipassword">$services.localization.render('platform.core.profile.passwd.newPassword')</label></dt>
-      <dd><input id="xwikipassword" type="password" name="password" value="$!escapetool.xml($request.password)" size="60"/></dd>
-      <dt><label id="xwikipassword2label" for="xwikipassword2">$services.localization.render('platform.core.profile.passwd.reenterPassword')</label></dt>
-      <dd><input id="xwikipassword2" type="password" name="password2" value="$!escapetool.xml($request.password2)" size="60"/></dd>
-    </dl>
-    <div class="padded buttons">
-      <span class="buttonwrapper"><input type="submit" value="$services.localization.render('platform.core.profile.passwd.submit')" class="button"/></span>
-      <span class="buttonwrapper"><a href="$doc.getURL("view")" class="secondary button">$services.localization.render('platform.core.profile.passwd.cancel')</a></span>
-    </div>
-  </form>
+    #else
+      $response.setStatus(403)
+      #xwikimessageboxstart($services.localization.render('platform.core.errorMessageType') $services.localization.render('platform.core.profile.passwd.notAllowed'))
+      #xwikimessageboxend()
+    #end
+  #else
+    $response.setStatus(400)
+    #xwikimessageboxstart($services.localization.render('platform.core.noticeMessageType') $services.localization.render('platform.core.profile.passwd.notaUser'))
+    #xwikimessageboxend()
   #end
-#else
-$response.setStatus(403)
-#xwikimessageboxstart($services.localization.render('platform.core.errorMessageType') $services.localization.render('platform.core.profile.passwd.notAllowed'))
-#xwikimessageboxend()
-#end
-#else
-$response.setStatus(400)
-#xwikimessageboxstart($services.localization.render('platform.core.noticeMessageType') $services.localization.render('platform.core.profile.passwd.notaUser'))
-#xwikimessageboxend()
-#end
-</div>## mainContentArea
+  </div>## mainContentArea
 </div>## main
 #template("endpage.vm")
