--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/admin.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/admin.vm
@@ -72,8 +72,14 @@
   #else
     ## Admin app not installed, display only Import
     #set ($importaction = $doc.getURL('import'))
-    #if ($xwiki.searchDocuments('1=1').size() < 40)
-      ## Less than 40 pages in the wiki, probably a fresh install (16/07/08 : XWiki creates 21 pages at startup)
+    ## Check how many documents that are not XClasses are in the database (a number of XClasses are created
+    ## automatically at startup when the database is empty and we don't want to take them into account).
+    #set ($documentCount = $services.query.xwql("where doc.xWikiClassXML is null or doc.xWikiClassXML not like '<%'"
+      ).addFilter('unique').count())
+    ## Unfortunately there are at least 3 documents that are not XClasses and which are created automatically (Watchlist
+    ## notifiers) and we want to exclude them also.
+    #if ($documentCount < 6)
+      ## Less than 6 pages in the wiki, probably a fresh install.
       #set ($URLhost = 'http://maven.xwiki.org')
       #set ($URLgroup = 'org/xwiki/enterprise')
       #set ($URLartifact = 'xwiki-enterprise-ui-mainwiki-all')
@@ -88,7 +94,7 @@
       #end
       #warning($services.localization.render('admin.defaultwikinotinstalled', ["<a href='$URL'>$URL</a>"]))
     #else
-      ## More than 40 pages and Admin app not installed, probably an upgrade.
+      ## More than 6 pages in the wiki and Admin app not installed, probably an upgrade.
       #warning($services.localization.render('admin.adminappnotinstalled', ['<a href="http://extensions.xwiki.org/xwiki/bin/view/Extension/Administration+Application">http://extensions.xwiki.org/xwiki/bin/view/Extension/Administration+Application</a>']))
     #end
     <div id="admin-page">
