XWIKI-11262: Capitalize "Extensions Manager" options from Administration

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/vertical-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/vertical-menus.less
@@ -10,6 +10,7 @@
     li {
       display: block;
       font-size: @font-size-small;
+      text-transform: capitalize;
       .group {
         .list-group-item;
         text-transform: uppercase;
