XWIKI-11496: Inline Edit action doesn't support the xhidden query parameter XWIKI-11485: FlamingoThemes space shown after creating own color theme

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/editinline.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/editinline.vm
@@ -71,6 +71,9 @@ $xwiki.ssfx.use('uicomponents/widgets/fullScreen.css', true)##
 #if("$!request.title" != '')
   <input type="hidden" name="title" value="$escapetool.xml($!request.title)" />
 #end
+#if("$!request.xhidden" != '')
+  <input type="hidden" name="xhidden" value="$escapetool.xml($!request.xhidden)" />
+#end
 ## ----------------------------
 ## Display the rendered content
 ## ----------------------------
