--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -697,4 +697,13 @@ rendering.transformations = $xwikiRenderingTransformations
 # mail.sender.properties = mail.smtp.starttls.enable = true
 # mail.sender.properties = mail.smtp.socks.host = someserver
 
+#-# [Since 6.4M2]
+#-# Defines which authorization checls are done when sending mails using the Mail Sender Script Service.
+#-# Example of valid values:
+#-# - "programmingrights": the current document must have Programming Rights
+#-# - "alwaysallow": no check is performed. This is useful when setting up XWiki in a secure environment where we
+#-#   want to allow all users to be able to send emails through the Script Service.
+#-# The default is:
+# mail.sender.scriptServiceCheckerHint = programmingrights
+
 $!xwikiPropertiesAdditionalProperties
