XARATINGS-4 : Allow admins to choose in which space the app will be active - drop the JS injection and move the code which handles the rating display into a UI Extension - this would make the code cleaner and easier to read properties from a configuration object due to not having to make a request to get those parameters

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/contentview.vm
@@ -23,6 +23,12 @@
   #end
 #end
 ## ----------------------------------------------------------------------------
+## Display UI Extensions before the title element
+## ----------------------------------------------------------------------------
+#foreach ($uix in $services.uix.getExtensions('org.xwiki.platform.template.title.before'))
+  $services.rendering.render($uix.execute(), 'xhtml/1.0')
+#end
+## ----------------------------------------------------------------------------
 ## Compute title to display and modify rendered content accordingly.
 ## ----------------------------------------------------------------------------
 #template("titlevars.vm")
