--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
@@ -32,6 +32,12 @@
 <div class="xcontent">
   <div class="row document-header">
     <div class="document-info col-xs-12 #if($displayContentMenu)col-md-7#end">
+      ## --------------------------------------------------------
+      ## Display UI Extensions before the title element
+      ## --------------------------------------------------------
+      #foreach ($uix in $services.uix.getExtensions('org.xwiki.platform.template.title.before'))
+        $services.rendering.render($uix.execute(), 'xhtml/1.0')
+      #end
       <div id="document-title"><h1>$titleToDisplay</h1></div>
       <div class="xdocLastModification">
         $services.localization.render('core.footer.modification', [$xwiki.getUserName($tdoc.author), $xwiki.formatDate($tdoc.date)])
