--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -1418,17 +1418,8 @@ ${Msz}Mb##
               #else
                 #set($isSortable = false)
               #end
-              ## Determine the name to be displayed in the column header. Strategy is as following :
-              ## - If defined the displayName passed as a column option wins
-              ## - If not, and if a i18n prefix has been passed, we use the localization tool with the prefix + the column name
-              ## - Finally, we fall back on the column name
-              #if("$!colprop.displayName" != '')
-                #set($displayName = $colprop.displayName)
-              #elseif($transprefix != '')
-                #set($displayName = $services.localization.render("${transprefix}${colname}"))
-              #else
-                #set($displayName = $colname)
-              #end
+              ## Get the column's display name to use in the header.
+              #set($displayName = "#getLivetableColumnDisplayName($colname, $colprop, $transprefix)")
               <th class="xwiki-livetable-display-header-text $!colprop.headerClass #if($!colprop.type=='hidden')hidden#end #if($isSortable)sortable #if($colname == $selectedColumn)selected $defaultOrder#else asc#end#end#if ($colname == '_avatar') avatar#end" scope="col">
                 #if($isSortable)<a rel="${colname}">#end
                 #if($isFilterable && ("$!colprop.type"=="text"||"$!colprop.type"=="number"))<label for="xwiki-livetable-${divid}-filter-${velocityCount}">#end
@@ -1550,6 +1541,30 @@ ${Msz}Mb##
 #end## end-livetable-macro
 
 #**
+ * Internal macro - Determine the name to be displayed in a livetable's column header. Strategy is as follows :
+ * - If defined, the 'displayName' passed as a column option wins.
+ * - If not, and if a i18n prefix has been passed, we use the localization tool with the prefix + the column name.
+ * - Finally, we fall back on the column name.
+ *
+ * @param colname the column name
+ * @param colprop the column properties map
+ * @param transprefix the translations prefix to use
+ *
+ * @internal
+ *#
+##
+#macro(getLivetableColumnDisplayName $colname $colprop $transprefix)
+  #if("$!colprop.displayName" != '')
+    #set($displayName = $colprop.displayName)##
+  #elseif($transprefix != '')
+    #set($displayName = $services.localization.render("${transprefix}${colname}"))##
+  #else
+    #set($displayName = $colname)##
+  #end
+$displayName##
+#end
+
+#**
  * Internal macro - Used by the livetable macro to generate a JavaScript anonymous function
  * that is passed to the LiveTable object constructor. This is function is dynamically written
  * according to columns properties passed to the livetable macro.
@@ -1567,6 +1582,8 @@ function (row, i, table) {
   if (row["doc_viewable"]) {
   #foreach($colname in $collist)
     #set($colprop = $colprops.get($colname))
+    ## Get the column's display name to be used when displaying the reponsive version.
+    #set($displayName = "#getLivetableColumnDisplayName($colname, $colprop, $transprefix)")
     // $colname
     #if("$!colprop.type"!="hidden")
       #if($colname.indexOf("doc.")==0)
@@ -1577,7 +1594,7 @@ function (row, i, table) {
       ## Is the td element bound to a link ?
       #if("$!colprop.link" != "" && "$!colname" != "_actions")
         #set($tdClass = "${jscolname} link$!{colprop.link} type$!{colprop.type}")
-        var td = new Element("td", {'class':"$tdClass", 'data-title': "$escapetool.xml($services.localization.render("${transprefix}${colname}"))"});
+        var td = new Element("td", {'class':"$tdClass", 'data-title': "$escapetool.xml($displayName)"});
         var link = #if("$!colprop.link" != "editor") new Element("a"); #else new Element("span"); #end
         ## Automatic: the link url is in JSON results, with key column name + "_url"
         #if("$!colprop.link"=="auto")
@@ -1620,7 +1637,7 @@ function (row, i, table) {
         tr.appendChild(td);
       #elseif("$colname" == "_actions")
         var adminActions = ['admin', 'rename', 'rights'];
-        var td = new Element("td", {'class' : 'actions', 'data-title': "$escapetool.xml($services.localization.render("${transprefix}${colname}"))"});
+        var td = new Element("td", {'class' : 'actions', 'data-title': "$escapetool.xml($displayName)"});
         #foreach($action in $colprop.get("actions"))
           if (row["doc_has${action}"] || '${action}' == 'view' || (row["doc_has${action}"] === undefined && (row["doc_hasadmin"] || adminActions.indexOf('${action}') < 0))) {
             #if($velocityCount > 1)
@@ -1650,7 +1667,7 @@ function (row, i, table) {
         tr.appendChild(td);
       #else
         #set($tdClass = "${jscolname} link$!{colprop.link} type$!{colprop.type}")
-        var fieldel = new Element("td", {'class':"$tdClass", 'data-title': "$escapetool.xml($services.localization.render("${transprefix}${colname}"))"});
+        var fieldel = new Element("td", {'class':"$tdClass", 'data-title': "$escapetool.xml($displayName)"});
         #if($colprop.html && $colprop.html==true)
           fieldel.innerHTML = row["${jscolname}"];
         #else
